<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcercaDeActivity">

    <ImageView
        android:layout_width="800dp"
        android:layout_height="800dp"
        android:adjustViewBounds="true"
        android:background="@mipmap/ic_fondo_preguntas_foreground"
        android:scaleType="centerCrop"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/navy"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/acerca_de_jesoot"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/textoInfo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white50"
        android:padding="20dp"
        android:text="@string/acerca_de1"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/textoInfo2"
        app:layout_constraintTop_toBottomOf="@id/titulo" />

    <TextView
        android:id="@+id/textoInfo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white50"
        android:padding="20dp"
        android:text="@string/acerca_de2"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/textoInfo1"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout2" />

    <LinearLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/navy2"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:layout_gravity="center|end"
            android:id="@+id/bt_atras_ad"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/volver_al_menu"
            android:textColor="@color/navy"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:backgroundTint="@color/yellow"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>