<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/roundstyle3">

    <TextView
        android:id="@+id/tituloPregunta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tarjeta_pregunta"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/botonBorrarPregunta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/preguntaTarjeta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/botonBorrarPregunta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tituloPregunta" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/tituloRespuesta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tarjeta_respuesta_correcta"
        app:layout_constraintEnd_toStartOf="@+id/respuestaTarjeta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preguntaTarjeta" />

    <TextView
        android:id="@+id/respuestaTarjeta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/botonBorrarPregunta"
        app:layout_constraintStart_toEndOf="@+id/tituloRespuesta"
        app:layout_constraintTop_toBottomOf="@+id/preguntaTarjeta" />

    <Button
        android:id="@+id/botonBorrarPregunta"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tarjeta_bt_borrar_pregunta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respuestaTarjeta"
        android:backgroundTint="@color/navy"/>

</androidx.constraintlayout.widget.ConstraintLayout>