<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PuntuacionActivity"
    >

    <ImageView
        android:layout_width="800dp"
        android:layout_height="800dp"
        android:adjustViewBounds="true"
        android:background="@mipmap/ic_fondo_preguntas_foreground"
        android:scaleType="centerCrop"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/navy"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/felicidades"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/texto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@color/navy"
        android:textStyle="italic"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/has_terminado_tu_partida"
        app:layout_constraintTop_toTopOf="@+id/titulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/puntuacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:background="@color/navy2"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/texto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/navy"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_otra"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_margin="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/jugar_de_nuevo"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            android:backgroundTint="@color/navy2"
            />

        <Button
            android:layout_gravity="center|end"
            android:id="@+id/btn_menu"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/volver_al_menu"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:backgroundTint="@color/yellow"/>
    </LinearLayout>
    
</androidx.constraintlayout.widget.ConstraintLayout>