<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormularioActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="false"
        android:background="@mipmap/ic_fondo_formulario_foreground"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_aviso"
        app:layout_constraintVertical_bias="1.0" />

    <FrameLayout
        android:id="@+id/fl_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <TextView
            android:id="@+id/tv_tituloApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/nombre_largo"
            android:textColor="@color/white"
            android:textStyle="bold|italic"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowDy="2"
            android:shadowRadius="5"/>
    </FrameLayout>

    <TextView
        android:id="@+id/tv_aviso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sombra"
        android:padding="10dp"
        android:text="@string/aviso_formulario"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/fl_titulo"
        tools:layout_editor_absoluteX="0dp"
        android:textSize="16sp"
        android:elevation="10dp"/>

    <TextView
        android:labelFor="@id/et_pregunta"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/tv_etiqueta_pregunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/etiqueta_pregunta"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:layout_editor_absoluteX="0dp"/>

    <EditText
        android:id="@+id/et_pregunta"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/roundstyle"
        android:maxLines="4"
        android:minLines="4"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="Introduce la pregunta."
        app:layout_constraintTop_toBottomOf="@+id/tv_etiqueta_pregunta" />

    <TextView
        android:layout_marginStart="10dp"
        android:id="@+id/tv_etiqueta_respuestas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="10"
        android:text="@string/etiqueta_respuestas"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/cv_cajaRespuestas"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/et_pregunta"
        app:layout_constraintVertical_bias="0.833" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cv_cajaRespuestas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/tv_etiqueta_respuestas">

        <EditText
            android:id="@+id/et_respuesta1"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/roundstyle"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/et_respuesta2"
            android:hint="Respuesta 1"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/et_respuesta2"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/roundstyle"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/et_respuesta1"
            app:layout_constraintBottom_toTopOf="@+id/et_respuesta3"
            android:hint="Respuesta 2"
            android:layout_margin="10dp"
            />

        <EditText
            android:id="@+id/et_respuesta3"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/roundstyle"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/et_respuesta2"
            app:layout_constraintBottom_toTopOf="@+id/et_respuesta4"
            android:hint="Respuesta 3"
            android:layout_margin="10dp"
            />

        <EditText
            android:id="@+id/et_respuesta4"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/roundstyle"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_respuesta3"
            android:hint="Respuesta 4"
            android:layout_margin="10dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
        app:layout_constraintEnd_toStartOf="@+id/cv_cajaRespuestas"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_etiqueta_respuestas">

        <RadioButton
            android:id="@+id/rb_resp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"/>

        <RadioButton
            android:id="@+id/rb_resp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rb_resp3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/rb_resp4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1" />

    </RadioGroup>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/navy"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/tv_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="GUARDAR PREGUNTA"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold|italic" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>